--- a/apps/loginapp/templates/loginapp/index.html
+++ b/apps/loginapp/templates/loginapp/index.html
@@ -21,7 +21,7 @@
         <li><input type="text" name="email" value="bob@bob.com"></li>
         <li><input type="password" name="password" value="password"></li>
         <li><input type="password" name="confirm_password" value="password"></li>
-        <li><input type="submit" name="" value="Register"></li>
+        <li><input type="submit" name="" value="Register Test"></li>
       </ul>
     </form>
 
